# wirescript

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  example.txt
.github/workflows/: deploy-github-pages.yml  deploy-playground.yml
crates/bearilog/: Cargo.toml
crates/bearilog/src/: ast.rs  bearilog_tests.rs  compiler_tests.rs  grammar.lalrpop  grammar.rs  graphviz.rs  lib.rs
crates/bearilog/src/compiler/: gates.rs  mod.rs  wires.rs
crates/brdb/: Cargo.toml
crates/brdb/src/: lib.rs  plaintext.lalrpop
crates/brdb/src/assets/gates/: logic.rs
crates/brdb/src/wrapper/: brick.rs
crates/builder/: Cargo.toml
crates/builder/src/: errors.rs  grid.rs  helpers.rs  layout.rs  lib.rs  options.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
crates/wasm/: Cargo.toml  README.md  app.js  bench.mjs  build-playground.sh  index.html
crates/wasm/playground/: build-search-index.mjs  docs.js  editor.js  files.js  index.html  monarch.js  prefabs.js  share.js
crates/wasm/playground/sdk/: README.md  check.mjs  compile.mjs  format.mjs  hover.mjs
crates/wasm/playground/sdk/examples/: array_push_pop.ws  assets.ws  async_signals.ws  chips_and_mods.ws  counter.ws  display_score.ws  physics_launch.ws  records.ws  ref_params.ws  zones.ws
crates/wasm/playground/sdk/vscode/: extension.js  package.json
crates/wasm/src/: analysis.rs  lib.rs
crates/wirescript/: Cargo.toml  gate_docs.json
crates/wirescript/data/: gate_semantics.json  inventory_brdb.json  logic_gate_inventory.simple.json
crates/wirescript/examples/: check_overlaps.rs  count_allocs.rs  dhat_lower.rs  dump_layout_json.rs  fuzz_programs.rs  profile_stages.rs
crates/wirescript/probes/: gate_semantics.ws  verify_semantics.ws
crates/wirescript/scripts/: gen_inventory.mjs  gen_semantics.mjs  gen_verifier.mjs
crates/wirescript/scripts/test/: gen_semantics.test.mjs  gen_verifier.test.mjs
crates/wirescript/scripts/test/fixtures/: probe_dump_v1.txt  probe_dump_v3.txt
crates/wirescript/src/: analyze.rs  ast.rs  collections.rs  compile.rs  diagnostic.rs  emit.rs  intern.rs  lexer.rs  lib.rs  parser.rs  resolve.rs  scope.rs  template.rs  template_cache.rs  typecheck.rs
crates/wirescript/src/analysis/: assets.rs  definition.rs  format.rs  gate_docs.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  resource_estimate.rs  symbols.rs  text.rs  types.rs
crates/wirescript/src/catalog/: arrays.rs  calls.rs  events.rs  mod.rs  operators.rs
crates/wirescript/src/ir/: build.rs  gate_class.rs  mod.rs  port_registry.rs
crates/wirescript/src/layout/: compose.rs  dag.rs  mod.rs  region.rs  wall.rs
crates/wirescript/src/lower/: access.rs  call.rs  context.rs  decl.rs  expr.rs  handler.rs  mod.rs  ops.rs  predeclare.rs  stmt.rs
crates/wirescript/src/lower/fold/: eval.rs  mod.rs  table.rs
crates/wirescript/src/lower/tests/: annotations.rs  basic.rs  block_expr.rs  chip.rs  compound.rs  fold.rs  fusion.rs  imports.rs  mod.rs  opaque.rs  port_side.rs  purity.rs  records.rs  returns.rs  scope.rs  string.rs  types.rs  wire_completeness.rs
crates/wirescript/src/types/: coerce.rs  mod.rs  unify.rs
crates/wirescript/tests/: array_ref.rs  asset_compare.rs  await_test.rs  constant_fold.rs  emit_value.rs  fold_emit.rs  fold_invariants.rs  import_scope_repro.rs  layout_snapshots.rs  local_exec.rs  lsp_oom_repro.rs  open_chips.rs  phase1_roundtrip.rs  pollution.rs  port_rerouters.rs  prefab_ref.rs  template_snapshots.rs  text_labels.rs  wall_layout.rs  write_sample.rs
crates/wirescript/tests/fixtures/: buffer_loop.layout.snap  buffer_loop.ws  if_handler.layout.snap  if_handler.ws  nested_ifs.layout.snap  nested_ifs.ws  own_and_child.layout.snap  own_and_child.ws
docs/wirescript/: README.md  best-practices.md  builtins.md  chips.md  exec-context.md  expressions.md  folding.md  statements.md  syntax.md  types.md
editors/tree-sitter-wirescript/: .gitignore  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
editors/tree-sitter-wirescript/queries/: highlights.scm  indents.scm  locals.scm
editors/tree-sitter-wirescript/test/corpus/: chips.txt  declarations.txt  expressions.txt  literals.txt  statements.txt  types.txt
editors/vscode/: .prettierrc  language-configuration.json  package-lock.json  package.json  prettier-plugin-wirescript.js  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: wirescript.tmLanguage.json
examples/: 7seg  cpu  fourinarow  game2048.ws  game2048_chip.ws  import_all.ws  import_named.ws  import_namespace.ws  primitives  reversi  spinning_text.ws  utils.ws
src/: ast.rs  bearilog.lalrpop  bearilog_modules.lalrpop  bearilog_test.rs  bearilog_tests.rs  compiler.rs  compiler_tests.rs  graphviz.rs  helpers.rs  lib.rs  main.rs  plaintext.lalrpop  wires.rs
src/bearilog/: ast.rs  bearilog_tests.rs  compiler_tests.rs  graphviz.rs  mod.rs
src/bearilog/compiler/: errors.rs  gates.rs  mod.rs  module.rs  wires.rs
src/brdb/: errors.rs  fs.rs  mod.rs  pending.rs  revisions.rs  tables.rs
src/brdb/assets/: bricks.rs  entities.rs  literal_component.rs  materials.rs  mod.rs
src/brdb/assets/gates/: boolean.rs  buffer.rs  logic.rs  mod.rs  rerouter.rs
src/brdb/schema/: as_brdb.rs  global_data.rs  intern.rs  mod.rs  read.rs  value.rs  write.rs
src/brdb/wrapper/: bits.rs  brick.rs  bstring.rs  common.rs  components.rs  entities.rs  mod.rs  owners.rs  save.rs  schemas.rs  wire.rs  world.rs
src/builder/: errors.rs  grid.rs  helpers.rs  layout.rs  mod.rs
src/compiler/: errors.rs  gates.rs  mod.rs  module.rs  wires.rs
