[workspace]
members = ["crates/bearilog", "crates/builder", "crates/cli", "crates/wasm"]
resolver = "3"

[workspace.dependencies]
# Bearilog CLI
clap = { version = "4.5.40", features = ["derive"] }
# Bearilog CLI
clap-stdin = "0.6.0"
lalrpop = "0.22.2"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

bearilog = { path = "crates/bearilog" }
brdb = { version = "0.2.1", default-features = false, features = ["brz"] }
# brdb = { path = "../brdb/crates/brdb", default-features = false, features = [
#   "brz",
# ] }
builder = { path = "crates/builder" }
