[package]
name = "brdb"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop.workspace = true

[dependencies]
blake3.workspace = true
indexmap.workspace = true
itertools.workspace = true
lalrpop-util.workspace = true
rmp.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
zstd.workspace = true
