[package]
name = "bearilog-cli"
version = "0.1.0"
edition = "2024"


[dependencies]
mimalloc = "0.1"
clap.workspace = true
clap-stdin.workspace = true
brdb = { workspace = true, features = ["brz", "brdb"] }
wirescript.workspace = true
# Legacy bearilog deps kept until we delete the old crates.
builder.workspace = true
bearilog.workspace = true
