[package]
name = "wirescript-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wirescript-lsp"
path = "src/main.rs"

[dependencies]
wirescript = { path = "../wirescript" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
