[package]
name = "wasm"
version = "0.1.0"
authors = ["Isaac <gpg@reheatedcake.io>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

brdb = { workspace = true, features = ["brz"] }
wirescript = { path = "../wirescript", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
