[package]
name = "wirescript"
version = "0.9.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wirescript-check"
path = "src/bin/check.rs"

[features]
default = ["brdb-full"]
brdb-full = ["brdb/brdb"]

[dependencies]
brdb = { workspace = true, features = ["brz"] }
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.7"
bitflags = "2"
lasso = { version = "0.7", features = ["multi-threaded"] }
